--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-
   "manifest_version": 2,
   "name": "Howork", 
   "version": "3.0",
+  
   "description": "Working time manager",
   "author": "Ryu Sung Chul",
 
@@ -23,7 +23,9 @@
     }
   },
   
-  "permissions": ["storage"]
+  "permissions": ["storage"],
+
+  "homepage_url": "https://github.com/daka0522/howork"
   
 
 
